cabal-version:       2.2

name:                blog-haskell
version:             0.1.0.0
-- synopsis:            シンプルなHaskell Webサーバー
description:         Servantを使用したシンプルなHealth Check APIを提供するHaskellサーバー
homepage:            https://github.com/githubuser/blog-haskell#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

common shared-properties
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

library
  import:              shared-properties
  hs-source-dirs:      src
  exposed-modules:     BlogHaskell.API
                       BlogHaskell.Types
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , servant
                     , aeson
                     , wai
                     , text

executable blog-haskell
  import:              shared-properties
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , blog-haskell
                     , warp
                     , wai

test-suite blog-haskell-test
  import:              shared-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blog-haskell
                     , hspec
                     , servant-server
                     , wai
                     , wai-extra
                     , http-types
